<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">
    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:src="#95FF59FF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cover_description"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toTopOf="@+id/img_cover"
        app:layout_constraintTop_toBottomOf="@+id/img_cover"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="5dp"
        tools:src="@drawable/yuu" />
    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/yuu_serizawa"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        app:layout_constraintLeft_toLeftOf="@+id/img_profile"
        app:layout_constraintRight_toRightOf="@+id/img_profile"/>
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/yuu_serizawa"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/profile_username"
        app:layout_constraintRight_toRightOf="@+id/profile_username"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"/>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_follower">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_following"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:text="@string/follower"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/profile_follower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/value_of_follower"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_follower">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_following"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:text="@string/repository"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/profile_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/value_of_repository"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_follower">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_following"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:text="@string/following"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/profile_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/value_of_following"/>
            </LinearLayout>
        </RelativeLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tabelRowLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/circle_foll"
                android:text="@string/location"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/profile_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_of_Location"
                android:textSize="15sp"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tabelRowCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabelRowLocation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/circle_following"
                android:text="@string/company"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/profile_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Value_of_Company"
                android:textSize="15sp"/>
        </LinearLayout>
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>