<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:padding="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photos_user"
            android:layout_width="55dp"
            android:layout_height="55dp"
            tools:src="@color/colorPrimaryDark"
            android:layout_marginEnd="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_photos_user"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/circle"
                        android:gravity="center_vertical"
                        android:text="@string/repository"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/item_rep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:gravity="center_horizontal"
                        android:drawablePadding="10dp"
                        android:text="@string/_100"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/circle_foll"
                        android:gravity="center_vertical"
                        android:text="@string/followers"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/item_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:gravity="center_horizontal"
                        android:drawablePadding="10dp"
                        android:text="@string/_1001"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/circle_following"
                        android:text="@string/following"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/item_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:gravity="center_horizontal"
                        android:drawablePadding="10dp"
                        android:text="@string/_1001"
                        android:textSize="12sp"/>
                </LinearLayout>
            </TableRow>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>